--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "framer-motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-is": "^19.2.0",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.5.0",
     "viem": "^2.40.0",
-    "wagmi": "^3.0.1"
+    "wagmi": "^2.19.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
